--- a/index.html
+++ b/index.html
@@ -1,102 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I'm Sorry</title>
+    <title>Do You Forgive Me? ❤️</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom, #f8cdda, #1d2b64);
-            color: white;
-            text-align: center;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background: linear-gradient(to bottom, #ffdde1, #ee9ca7);
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
         }
-
+        .container {
+            text-align: center;
+            color: #333;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            animation: fadeIn 1s ease-in-out;
+        }
         h1 {
-            font-size: 3rem;
-            margin: 0;
+            font-size: 2.5em;
+            margin-bottom: 20px;
+            color: #ff6b81;
         }
-
         p {
-            font-size: 1.5rem;
-            margin: 20px 0;
-            line-height: 1.6;
+            font-size: 1.2em;
+            margin-bottom: 30px;
         }
-
-        .heart {
-            font-size: 5rem;
-            margin: 20px 0;
-            animation: heartbeat 1s infinite;
-        }
-
-        @keyframes heartbeat {
-            0%,
-            100% {
-                transform: scale(1);
-            }
-
-            50% {
-                transform: scale(1.2);
-            }
-        }
-
-        .buttons {
-            display: flex;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        button {
-            background: #ff477e;
-            color: white;
-            border: none;
+        .button {
+            background-color: #ffd1dc;
+            color: #333;
             padding: 15px 30px;
-            font-size: 1rem;
-            border-radius: 25px;
+            border: 2px solid #ff6b81;
+            border-radius: 50%;
+            font-size: 1.2em;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 10px;
+            position: relative;
         }
-
-        button:hover {
-            background: #ff759c;
+        .button:hover {
+            transform: scale(1.1);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
         }
-
-        #no-button {
+        .no-button {
+            animation: shake 0.5s ease-in-out infinite;
+        }
+        .thank-you {
+            display: none;
+            font-size: 1.5em;
+            color: #ff6b81;
+            margin-top: 20px;
+            animation: bounce 1s infinite;
+        }
+        .names {
+            font-size: 1.8em;
+            color: #ff6b81;
+            margin-top: 15px;
+        }
+        .heart {
             position: absolute;
+            width: 20px;
+            height: 20px;
+            background: #ff6b81;
+            transform: rotate(45deg);
+            animation: float 5s infinite ease-in-out;
+        }
+        .heart::before,
+        .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background: #ff6b81;
+            border-radius: 50%;
+        }
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
+        .heart::after {
+            left: 10px;
+            top: 0;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-10px); }
+            50% { transform: translateX(10px); }
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+        @keyframes float {
+            0% {
+                transform: translate(-50px, 0) rotate(45deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(50px, -200px) rotate(45deg);
+                opacity: 0;
+            }
+        }
+        @keyframes move {
+            0% { transform: translate(0, 0); }
+            25% { transform: translate(50px, -20px); }
+            50% { transform: translate(-30px, 40px); }
+            75% { transform: translate(20px, -50px); }
+            100% { transform: translate(0, 0); }
+        }
+        .floating {
+            animation: move 3s infinite;
         }
     </style>
 </head>
-
 <body>
-    <h1>I’m Sorry, Love</h1>
-    <div class="heart">❤️</div>
-    <h1>Vidhi Harshit Chaudhary ♾️ ❤️</h1>
-    <p> I know I made a mistake, and it hurts me deeply to know I’ve upset you. You are the most important person in my
-        life, and I can’t bear the thought of us being anything less than happy together. </p>
-    <p> Please forgive me. I promise to do everything I can to make it up to you and ensure I never repeat my mistake.
-        You mean the world to me. </p>
-    <div class="buttons">
-        <button onclick="alert('You’ve forgiven me! Thank you, my love! ❤️')">Yes</button>
-        <button id="no-button" onclick="teleportNoButton()">No</button>
+    <!-- Floating Hearts -->
+    <div class="heart" style="left: 10%; animation-delay: 0s;"></div>
+    <div class="heart" style="left: 50%; animation-delay: 1s;"></div>
+    <div class="heart" style="left: 80%; animation-delay: 2s;"></div>
+    <div class="heart" style="left: 30%; animation-delay: 3s;"></div>
+    <div class="heart" style="left: 70%; animation-delay: 4s;"></div>
+
+    <div class="container" id="app">
+        <h1>Do You Forgive Me? ❤️</h1>
+        <p id="question">I’m really sorry for upsetting you. Can we make it better?</p>
+        <div id="buttons">
+            <button class="button floating" onclick="handleResponse('no')">No 💔</button>
+            <button class="button no-button" onclick="handleResponse('yes')">Yes ❤️</button>
+        </div>
+        <div class="thank-you" id="thank-you">
+            Thank you for forgiving me! You’re the best! ❤️
+            <div class="names" id="names"></div>
+        </div>
     </div>
 
     <script>
-        function teleportNoButton() {
-            const noButton = document.getElementById("no-button");
-            const randomX = Math.random() * (window.innerWidth - noButton.offsetWidth);
-            const randomY = Math.random() * (window.innerHeight - noButton.offsetHeight);
-            noButton.style.left = `${randomX}px`;
-            noButton.style.top = `${randomY}px`;
+        const boyName = "VIDHI"; // Replace with your name
+        const girlName = "HARSHIT CHAUDHARY"; // Replace with her name
+
+        const questions = [
+            "I’ll never repeat it! Do you forgive me now? 🥺",
+            "I promise to be better! Please forgive me. 🐻",
+            "I made a mistake, but I’ll fix it. Will you forgive me? 🌸",
+            "Your smile means the world to me. Can I see it again? 🌈",
+            "No more mistakes, I promise. Will you forgive me now? 🦋",
+            "abb toh maaf kardo and click on yes.Pls  <3"
+        ];
+
+        let currentQuestion = 0;
+
+        function handleResponse(response) {
+            if (response === 'yes') {
+                document.getElementById('question').style.display = 'none';
+                document.getElementById('buttons').style.display = 'none';
+                document.getElementById('thank-you').style.display = 'block';
+                document.getElementById('names').innerText = `${boyName} ❤️ ${girlName}`;
+            } else {
+                currentQuestion = (currentQuestion + 1) % questions.length;
+                document.getElementById('question').innerText = questions[currentQuestion];
+            }
         }
     </script>
 </body>
-
 </html>
